# ComputerGraphicsLab

./: .gitignore  CMakeLists.txt  Lab2.cpp  README.md  glad.c  main.cpp
include/glad/: glad.h
